# DiversityJobs

./: package-lock.json  package.json
backend/: README  app.py  diversityjobs.db  diversityjobs_schema.sql  generate_db.py  pyproject.toml  test.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/busca-candidato/: page.tsx
frontend/src/app/candidato/: page.tsx
frontend/src/app/candidato-john/: page.tsx
frontend/src/app/candidaturas/: page.tsx
frontend/src/app/candidaturas-john/: page.tsx
frontend/src/app/empresa/: page.tsx
frontend/src/app/jobs/: page.tsx
frontend/src/app/jobs/[id]/: page.tsx
frontend/src/app/perfil/: page.tsx
frontend/src/app/perfil-empresa/: page.tsx
frontend/src/app/registro/: page.tsx
frontend/src/app/registro-candidato/: page.tsx
frontend/src/app/vagas-criadas/: page.tsx
frontend/src/app/vagas-criadas/[id]/: page.tsx
src/app/: page.tsx
src/app/candidato/: page.tsx
src/app/jobs/: page.tsx
